# GildedRose-Refactoring-Kata

./: .gitignore  gilded_rose.py  pyproject.toml  test_gilded_rose.py
tests/: test_gilded_rose.py
