[tool.poetry]
name = "gildedrose-refactoring-kata"
version = "0.1.0"
description = ""
authors = ["Thibault Rodriguez <thibault.rodriguez@engie.com>"]
readme = "README.md"
packages = [{include = "gildedrose_refactoring_kata"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
