[tool.poetry]
name = "gildedrose-refactoring-kata"
version = "0.1.0"
description = ""
authors = ["Thibault Rodriguez <thibault.rodriguez@engie.com>"]
readme = "README.md"
packages = [{include = "gildedrose_refactoring_kata"}]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts='--cov=gilded_rose --cov-report html'
